--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview --open"
+    "preview": "vite preview",
+    "preview:prod": "npx serve -s dist -l 5173"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
